--- a/index.html
+++ b/index.html
@@ -56,16 +56,75 @@
          </div>
       </main>
       <div class="container">
-         <div class="frame1 justify-content-center">
-            <ul class="frame__left">
-               <li><h1>Consistent</h1></li>
-               <li><h1>Customer oriented</h1></li>
-               <li><h1>Innovative</h1></li>
-               <li><h1>Business oriented</h1></li>
-            </ul>
-            <div class="frame__right">
-               <h2 class="mb-3 clr__white">We turn the idea of legal services</h2>
-               <p class="body2 clr__white">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.</p>
+         <div class="frame-wrap">
+            <div class="frame">
+               <ul class="frame__left">
+                  <li class="frame__btn clr__white"><h1>Consistent</h1></li>
+                  <li class="frame__btn clr__text"><h1>Customer oriented</h1></li>
+                  <li class="frame__btn clr__text"><h1>Innovative</h1></li>
+                  <li class="frame__btn clr__text"><h1>Business oriented</h1></li>
+               </ul>
+               <div class="frame__right">
+                  <h2 class="mb-4 clr__white">We turn the idea of legal services</h2>
+                  <p class="body2 clr__text">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.</p>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="container">
+         <div class="title d-flex flex-column">
+            <a class="title__sub d-flex align-items-center sub__txt body3 clr__white fw-bold">
+               Services
+               <svg class="sub__icon" xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
+                  <path d="M3.5 2L8 6.5L3.5 11" stroke="inheret" stroke-width="2"/>
+               </svg>
+            </a>
+            <h1 class="clr__accent">What can we do better than others?</h1>
+         </div>
+         <div class="container">
+            <div class="row plus__wrap">
+               <div class="plus col-12 col-md-6 col-lg-4">
+                  <img class="plus__img" src="./assets/svg/1.svg" alt="1">
+                  <div class="plus__title">
+                     <h3 class="clr__regular">IT and e-commerce</h3>
+                     <p class="body2 clr__white">An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>
+                  </div>
+               </div>
+               <div class="plus col-12 col-md-6 col-lg-4">
+                  <img class="plus__img" src="./assets/svg/2.svg" alt="2">
+                  <div class="plus__title">
+                     <h3 class="clr__regular">Comprehensive daily legal support</h3>
+                     <p class="body2 clr__white">In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
+                  </div>
+               </div>
+               <div class="plus col-12 col-md-6 col-lg-4">
+                  <img class="plus__img" src="./assets/svg/3.svg" alt="3">
+                  <div class="plus__title">
+                     <h3 class="clr__regular">Structuring corporate relationships</h3>
+                     <p class="body2 clr__white">Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.</p>
+                  </div>
+               </div>
+               <div class="plus col-12 col-md-6 col-lg-4">
+                  <img class="plus__img" src="./assets/svg/4.svg" alt="4">
+                  <div class="plus__title">
+                     <h3 class="clr__regular">Building contractual relations</h3>
+                     <p class="body2 clr__white">Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.</p>
+                  </div>
+               </div>
+               <div class="plus col-12 col-md-6 col-lg-4">
+                  <img class="plus__img" src="./assets/svg/5.svg" alt="5">
+                  <div class="plus__title">
+                     <h3 class="clr__regular">Protection of business, intellectual property</h3>
+                     <p class="body2 clr__white">And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.</p>
+                  </div>
+               </div>
+               <div class="plus col-12 col-md-6 col-lg-4">
+                  <img class="plus__img" src="./assets/svg/6.svg" alt="6">
+                  <div class="plus__title">
+                     <h3 class="clr__regular">Judicial representation</h3>
+                     <p class="body2 clr__white">Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?</p>
+                  </div>
+               </div>
             </div>
          </div>
       </div>
