--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                <header class="first-section__header">
                   <div class="header__logo"><img src="./assets/svg/Logo.svg" alt="logo"></div>
                   <nav class="header__nav">
-                     <ul class="d-flex gap-3">
+                     <ul class="header__list d-flex gap-3">
                         <li><a class="header__link body2 f-bold" href="">about us</a></li>
                         <li><a class="header__link body2 f-bold" href="">services</a></li>
                         <li><a class="header__link body2 f-bold" href="">team</a></li>
@@ -28,7 +28,7 @@
                         <li><a class="header__link body2 f-bold" href="">contact</a></li>
                      </ul>
                   </nav>
-                  <div class="header__info d-flex align-items-center">
+                  <div class="header__info">
                      <div class="toggle-lang d-flex">
                         <!-- УК -->
                         <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off">
@@ -41,11 +41,11 @@
                         <label class="btn btn-lang body4" for="option3">En</label>
                      </div>
                      <div class="circle"></div>
-                     <p class="body2 clr__white">Kyiv, Mechnikova str, 14/1</p>
+                     <p class="nav__off body2 clr__white">Kyiv, Mechnikova str, 14/1</p>
                      <div class="circle"></div>
                      <a href=”tel:0800211927” class="body2 clr__white f-bold"><b>0800 211 927</b></a>
                      <div class="circle"></div>
-                     <a href="https://www.facebook.com/" _target><img src="./assets/svg/Logo_Facebook.svg" alt="logo facebook"></a>
+                     <a class="nav__off" href="https://www.facebook.com/" _target><img src="./assets/svg/Logo_Facebook.svg" alt="logo facebook"></a>
                   </div>
                </header>
                <div class="first-section__title text-center clr__white mb-5"><h1>you legal solutions provider</h1></div>
@@ -56,32 +56,32 @@
          </div>
       </main>
       <div class="container">
-         <div class="frame-wrap">
-            <div class="frame">
-               <ul class="frame__left">
-                  <li class="frame__btn clr__white"><h1>Consistent</h1></li>
-                  <li class="frame__btn clr__text"><h1>Customer oriented</h1></li>
-                  <li class="frame__btn clr__text"><h1>Innovative</h1></li>
-                  <li class="frame__btn clr__text"><h1>Business oriented</h1></li>
-               </ul>
-               <div class="frame__right">
-                  <h2 class="mb-4 clr__white">We turn the idea of legal services</h2>
-                  <p class="body2 clr__text">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.</p>
+         <div class="frame__wrap">
+            <div class="frame-wrap">
+               <div class="frame">
+                  <ul class="frame__left">
+                     <li class="frame__btn clr__white"><h1>Consistent</h1></li>
+                     <li class="frame__btn clr__text"><h1>Customer oriented</h1></li>
+                     <li class="frame__btn clr__text"><h1>Innovative</h1></li>
+                     <li class="frame__btn clr__text"><h1>Business oriented</h1></li>
+                  </ul>
+                  <div class="frame__right">
+                     <h2 class="mb-4 clr__white">We turn the idea of legal services</h2>
+                     <p class="body2 clr__text">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.</p>
+                  </div>
                </div>
             </div>
-         </div>
-      </div>
-      <div class="container">
-         <div class="title d-flex flex-column">
-            <a class="title__sub d-flex align-items-center sub__txt body3 clr__white fw-bold">
-               Services
-               <svg class="sub__icon" xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
-                  <path d="M3.5 2L8 6.5L3.5 11" stroke="inheret" stroke-width="2"/>
-               </svg>
-            </a>
-            <h1 class="clr__accent">What can we do better than others?</h1>
-         </div>
-         <div class="container">
+         <!-- !second -->
+            <div class="title d-flex flex-column">
+               <a class="title__sub d-flex align-items-center sub__txt body3 clr__white fw-bold">
+                  Services
+                  <svg class="sub__icon" xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
+                     <path d="M3.5 2L8 6.5L3.5 11" stroke="inheret" stroke-width="2"/>
+                  </svg>
+               </a>
+               <h1 class="clr__accent">What can we do better than others?</h1>
+            </div>
+         <!-- !thrid -->
             <div class="row plus__wrap">
                <div class="plus col-12 col-md-6 col-lg-4">
                   <img class="plus__img" src="./assets/svg/1.svg" alt="1">
