--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          <div class="container">
             <section class="first-section">
                <header class="first-section__header">
-                  <div class="header__logo"><img src="./assets/svg/Logo.svg" alt="logo"></div>
+                  <div class="header__logo"><img class="logo" src="./assets/svg/Logo.svg" alt="logo"></div>
                   <nav class="header__nav">
                      <ul class="header__list d-flex gap-3">
                         <li><a class="header__link body2 f-bold" href="">about us</a></li>
