@media screen and (max-width: 400px) >>> @media screen and (max-width: 500px)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
          <div class="main-wrap__bg">
             <object class="main-wrap__obj" data="./assets/svg/Symbol.svg" type=""></object>
          </div>
+         <div class="info-bg"></div>
          <div class="container">
             <section class="first-section">
                <header class="first-section__header">
