add btn-id, final commit v0.2

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                   </header>
                   <div class="first-section__title text-center clr__white mb-5"><h1>you legal solutions provider</h1></div>
                   <div class="first-section__btn text-center">
-                     <a href=""><img src="./assets/svg/Scroll.svg" alt="scroll"></a>
+                     <!-- ?btn -->
+                     <a href="#second" class="btn-id"><img class="btn-id" src="./assets/svg/Scroll.svg" alt="scroll"></a>
                   </div>
                </section>
             </div>
@@ -139,7 +140,7 @@
             </div>
          </div>
       </div>
-      <section class="second-section">
+      <section id="second" class="second-section">
          <div class="container">
             <div id="carouselExampleIndicators" class="carousel slide mb-60">
                <div class="carousel-inner">
