--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
    <link rel="stylesheet" href="./css/main.css">
    <script defer src="./js/main.js"></script>
-   <title>hlegal</title>
+   <title>Main page</title>
 </head>
 <body>
    <div class="body-wrap">
@@ -27,7 +27,7 @@
                         </button>
                         <nav class="menu" id="menu">
                            <ul class="menu__list">
-                              <li><a class="menu__link body2 f-bold" href="#">about us</a></li>
+                              <li><a class="menu__link body2 f-bold" href="./pages/about-us.html">about us</a></li>
                               <li><a class="menu__link body2 f-bold" href="#">services</a></li>
                               <li><a class="menu__link body2 f-bold" href="#">team</a></li>
                               <li><a class="menu__link body2 f-bold" href="#">publications</a></li>
